force-app/main/default/objects/Expert__c/Expert__c.object-meta.xml
<CustomObject>
    <label>Expert</label>
    <pluralLabel>Experts</pluralLabel>
    <nameField>
        <label>Expert Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Prototype-only data source for the "Schedule Expert Call" AI suggestion feature in the Salesforce-in-Teams record page: who's an expert in what, and their (free-text, not calendar-backed) available slots. Not the real expert-matching model discussed earlier (that would use Skill/SkillUser/Case_Skill__c, blocked on SkillUser being empty) - this is a deliberately simple, standalone object built specifically to unblock a working AI-suggestion demo now.</description>
</CustomObject>