force-app/main/default/objects/Expert__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <type>TextArea</type>
    <description>Short free-text description of this expert's background - sent to the AI suggestion prompt as extra matching context alongside Topic__c.</description>
</CustomField>