force-app/main/default/objects/Expert__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>Contact email for this expert - independent of Linked_User__c, since not every seeded expert in this prototype is a real Salesforce User.</description>
</CustomField>